Bug 307165 - Crash when pressing Ctrl+shift+l
Summary: Crash when pressing Ctrl+shift+l
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-21 15:30 UTC by Albert Astals Cid
Modified: 2012-09-21 16:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2012-09-21 15:30:36 UTC
Application: kmail (4.9.1)
KDE Platform Version: 4.9.1
Qt Version: 4.8.3
Operating System: Linux 3.5.0-15-generic x86_64
Distribution: Ubuntu quantal (development branch)

-- Information about the crash:
- What I was doing when the application crashed:
I pressed Ctrl+shift+l after opening kmail and it crashed. I can reproduce the crash all the time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ff9143cc7c0 (LWP 10959))]

Thread 4 (Thread 0x7ff90ae72700 (LWP 10963)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007ff91f5ceb2d in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007ff91f5cec39 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007ff9282c7e9a in start_thread (arg=0x7ff90ae72700) at pthread_create.c:308
#4  0x00007ff92aa1339d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7ff90a571700 (LWP 10964)):
#0  0x00007ff922e8deb0 in pthread_mutex_lock@plt () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007ff922ef8f71 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff922ebb7eb in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff922ebbdf9 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007ff922ebbfa4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff92b39dc16 in QEventDispatcherGlib::processEvents (this=0x7ff9040008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007ff92b36e2bf in QEventLoop::processEvents (this=this@entry=0x7ff90a570dc0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007ff92b36e548 in QEventLoop::exec (this=0x7ff90a570dc0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007ff92b26fb10 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007ff92b272aec in QThreadPrivate::start (arg=0x1afa3b0) at thread/qthread_unix.cpp:338
#10 0x00007ff9282c7e9a in start_thread (arg=0x7ff90a571700) at pthread_create.c:308
#11 0x00007ff92aa1339d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7ff909029700 (LWP 10965)):
#0  0x00007ff92aa079e3 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007ff922ebbe84 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007ff922ebbfa4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff92b39dc16 in QEventDispatcherGlib::processEvents (this=0x7ff8fc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007ff92b36e2bf in QEventLoop::processEvents (this=this@entry=0x7ff909028d90, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007ff92b36e548 in QEventLoop::exec (this=0x7ff909028d90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007ff92b26fb10 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007ff92b34e9af in QInotifyFileSystemWatcherEngine::run (this=0x1b45120) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007ff92b272aec in QThreadPrivate::start (arg=0x1b45120) at thread/qthread_unix.cpp:338
#9  0x00007ff9282c7e9a in start_thread (arg=0x7ff909029700) at pthread_create.c:308
#10 0x00007ff92aa1339d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7ff9143cc7c0 (LWP 10959)):
[KCrash Handler]
#6  QList (l=<error reading variable: Cannot access memory at address 0x20>, this=0x7fff823f9960) at /usr/include/qt4/QtCore/qlist.h:122
#7  QForeachContainer (t=<error reading variable: Cannot access memory at address 0x20>, this=0x7fff823f9960) at /usr/include/qt4/QtCore/qglobal.h:2346
#8  Akonadi::FavoriteCollectionsModel::collections (this=0x0) at ../../akonadi/favoritecollectionsmodel.cpp:181
#9  0x00007ff92748e412 in Akonadi::StandardActionManager::Private::slotSynchronizeFavoriteCollections (this=<optimized out>) at ../../akonadi/standardactionmanager.cpp:956
#10 0x00007ff927487e0e in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./standardactionmanager.moc:160
#11 Akonadi::StandardActionManager::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7fff823f9b70) at ./standardactionmanager.moc:137
#12 0x00007ff92b384f5f in QMetaObject::activate (sender=0x1bf1620, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff823f9b70) at kernel/qobject.cpp:3547
#13 0x00007ff92b88da32 in QAction::triggered (this=this@entry=0x1bf1620, _t1=false) at .moc/release-shared/moc_qaction.cpp:277
#14 0x00007ff92b88dc20 in QAction::activate (this=0x1bf1620, event=event@entry=QAction::Trigger) at kernel/qaction.cpp:1257
#15 0x00007ff92b88dd87 in QAction::event (this=<optimized out>, e=<optimized out>) at kernel/qaction.cpp:1183
#16 0x00007ff92cfb8647 in KAction::event (this=<optimized out>, event=0x7fff823fa110) at ../../kdeui/actions/kaction.cpp:131
#17 0x00007ff92b893e9c in QApplicationPrivate::notify_helper (this=this@entry=0x1592060, receiver=receiver@entry=0x1bf1620, e=e@entry=0x7fff823fa110) at kernel/qapplication.cpp:4562
#18 0x00007ff92b89830a in QApplication::notify (this=0x7fff823fb840, receiver=0x1bf1620, e=0x7fff823fa110) at kernel/qapplication.cpp:4423
#19 0x00007ff92d091cb6 in KApplication::notify (this=0x7fff823fb840, receiver=0x1bf1620, event=0x7fff823fa110) at ../../kdeui/kernel/kapplication.cpp:311
#20 0x00007ff92b36f56e in QCoreApplication::notifyInternal (this=0x7fff823fb840, receiver=0x1bf1620, event=0x7fff823fa110) at kernel/qcoreapplication.cpp:915
#21 0x00007ff92b8c4d74 in sendEvent (event=0x7fff823fa110, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#22 QShortcutMap::dispatchEvent (this=this@entry=0x1592180, e=e@entry=0x7fff823fa6e0) at kernel/qshortcutmap.cpp:884
#23 0x00007ff92b8c63a3 in QShortcutMap::tryShortcutEvent (this=0x1592180, o=<optimized out>, e=0x7fff823fa6e0) at kernel/qshortcutmap.cpp:364
#24 0x00007ff92b899fe9 in QApplication::notify (this=0x7fff823fb840, receiver=0x1a3ba00, e=0x7fff823fa6e0) at kernel/qapplication.cpp:3986
#25 0x00007ff92d091cb6 in KApplication::notify (this=0x7fff823fb840, receiver=0x1a3ba00, event=0x7fff823fa6e0) at ../../kdeui/kernel/kapplication.cpp:311
#26 0x00007ff92b36f56e in QCoreApplication::notifyInternal (this=0x7fff823fb840, receiver=0x1a3ba00, event=0x7fff823fa6e0) at kernel/qcoreapplication.cpp:915
#27 0x00007ff92b934e79 in QKeyMapper::sendKeyEvent (keyWidget=keyWidget@entry=0x1a3ba00, grab=grab@entry=false, type=QEvent::KeyPress, code=76, modifiers=..., text=..., autorepeat=autorepeat@entry=false, count=1, nativeScanCode=46, nativeVirtualKey=76, nativeModifiers=5) at kernel/qkeymapper_x11.cpp:1866
#28 0x00007ff92b9352b1 in QKeyMapperPrivate::translateKeyEvent (this=0x160ea00, keyWidget=0x1a3ba00, event=0x7fff823fb110, grab=<optimized out>) at kernel/qkeymapper_x11.cpp:1836
#29 0x00007ff92b910ed9 in QApplication::x11ProcessEvent (this=0x7fff823fb840, event=0x7fff823fb110) at kernel/qapplication_x11.cpp:3630
#30 0x00007ff92b938fa2 in x11EventSourceDispatch (s=0x1589dc0, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#31 0x00007ff922ebbbb5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007ff922ebbee8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007ff922ebbfa4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007ff92b39dbf6 in QEventDispatcherGlib::processEvents (this=0x14efb00, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#35 0x00007ff92b938c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007ff92b36e2bf in QEventLoop::processEvents (this=this@entry=0x7fff823fb4e0, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007ff92b36e548 in QEventLoop::exec (this=0x7fff823fb4e0, flags=...) at kernel/qeventloop.cpp:204
#38 0x00007ff92b373708 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#39 0x0000000000402bc9 in main (argc=<optimized out>, argv=<optimized out>) at ../../kmail/main.cpp:145

Reported using DrKonqi
Comment 1 András Manţia 2012-09-21 16:36:39 UTC
Git commit cb9bd1a2b30be96f4a82520f5ffcaf6584aefd5e by Andras Mantia.
Committed on 21/09/2012 at 18:36.
Pushed by amantia into branch 'master'.

Enable the favorite actions only when we have favorite folders. This avoid crashes in the StandardMailActionManager if the action is invoked without a favorite model.
FIXED-IN: 4.10

M  +12   -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/cb9bd1a2b30be96f4a82520f5ffcaf6584aefd5e
Comment 2 András Manţia 2012-09-21 16:39:55 UTC
Git commit a0d3c0ad6f8811cbb1c7eabeae748ee1888af735 by Andras Mantia.
Committed on 21/09/2012 at 18:39.
Pushed by amantia into branch 'KDE/4.9'.

Enable the favorite actions only when we have favorite folders. This avoid crashes in the StandardMailActionManager if the action is invoked without a favorite model.
FIXED-IN: 4.9.2
(cherry picked from commit cb9bd1a2b30be96f4a82520f5ffcaf6584aefd5e)

M  +11   -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/a0d3c0ad6f8811cbb1c7eabeae748ee1888af735