Enable the favorite actions only when we have favorite folders. This avoid crashes in the StandardMailActionManager if the action is invoked without a favorite model.

BUG: 307165
FIXED-IN: 4.10