kmmainwidget.cpp
@@ -87,6 +87,7 @@
 #include "messagecore/messagehelpers.h"
 
 #include "kmknotify.h"
+#include "../../kdepimlibs/akonadi/standardactionmanager.h"
 
 // LIBKDEPIM includes
 #include "progressmanager.h"
@@ -1168,6 +1169,7 @@ void KMMainWidget::createWidgets()
     mAkonadiStandardActionManager->setFavoriteCollectionsModel( mFavoritesModel );
     mAkonadiStandardActionManager->setFavoriteSelectionModel( mFavoriteCollectionsView->selectionModel() );
   }
+
   //mAkonadiStandardActionManager->createAllActions();
   //Don't use mMailActionManager->createAllActions() to save memory by not
   //creating actions that doesn't make sense.
@@ -1200,6 +1202,16 @@ void KMMainWidget::createWidgets()
 
   Q_FOREACH( StandardActionManager::Type standardAction, standardActions ) {
     mAkonadiStandardActionManager->createAction( standardAction );
+  }
+
+  QList<StandardActionManager::Type> favoriteActions;
+  favoriteActions << StandardActionManager::AddToFavoriteCollections
+                  << StandardActionManager::RemoveFromFavoriteCollections
+                  << StandardActionManager::RenameFavoriteCollection
+                  << StandardActionManager::SynchronizeFavoriteCollections;
+
+  Q_FOREACH( StandardActionManager::Type favoriteAction, favoriteActions) {
+    mAkonadiStandardActionManager->action( favoriteAction )->setEnabled( mEnableFavoriteFolderView );
   }
 
   QList<StandardMailActionManager::Type> mailActions;
